# house

./: .gitignore  package.json  pyproject.toml
apps/editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/src/: App.svelte  app.css  main.ts
apps/editor/src/components/: CanvasPane.svelte  EditorSidebar.svelte  InspectorPane.svelte
apps/editor/src/lib/: api.ts  canvasSvg.ts  geometry.ts  palette.ts  planEditing.ts  types.ts  yamlFormat.ts  yamlSelection.ts
artifacts/floorplans/: ridgestone-intent-studio-wing.yaml  ridgestone-intent-upper-alt.yaml  ridgestone-walls.yaml
blender/: house-design-4.blend  house-design-minimal.blend  ridgestone-3.blend
docs/: goals.md  house-patterns.md
docs/context/: ridgestone-guidelines.md
docs/design/: floor-plan-editor-webapp.md  floor-plan-language-design.md
docs/guides/: intent-floor-plan-dsl.md
docs/prompts/: house-dsl-spec.md  room-layout-search.md
src/floorplan_api/: __init__.py  main.py
src/floorplan_lang/: __init__.py  __main__.py  geometry.py  intent_plan.py  model.py  render_svg.py  wall_plan.py  yaml_io.py
tests/: test_floorplan_lang.py
